Blue Mode Website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width">
-    <title>replit</title>
+    <title>Mission 2022</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -24,7 +24,7 @@
 					<h1 class='title'> Stay Focused on <br> 
 					<span> Mission 2022 </span></h1>
 					<br>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quas perferendis possimus minima. Velit accusamus consequatur, earum eaque ex rerum labore nihil eum amet sint corporis tenetur illo, aliquid architecto.</p>
+					<p>Leaning to new thing is hard for beginners. But is he watch so many video on youtube then he understand, that I have to search google and practice with project. Exactly I am here same problem that was accounted. Here are so random textes.</p>
 					<a class="red-btn">Explore Now</a>
 					<br>
 					<p class='info'>Scroll Down to Explore more about mission 2022</p>
@@ -39,20 +39,20 @@
 		<section class="mission" id='mission'>
 			<h1 class="mission-title">My Mission in <span>2022</span></h1>
 			<div class="mission-elements">
-				<div class="mission-content-1">
-					<img src="https://raw.githubusercontent.com/ProgrammingHero1/mission-2022/main/images/illustrators/illustrator-1.png" alt="">
+				<div class="mission-content-1 mission-1">
+					<img src="./images/illustrators/illustrator-1.png" alt="">
 					<h2>Mission</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum ut itaque sunt, odio consectetur dolor reiciendis doloremque amet ipsam id cumque nemo nulla, ratione culpa libero distinctio voluptate quae necessitatibus.</p>
+					<p>My mission is in 2022 to become a successfull self learner and become a freelance web developer or web application developer. Now am learning deeply form programming hero. web So Inshalla I will become a sucessfull oneday with more and more hard works and practice.</p>
 				</div>
-				<div class="mission-content-1">
-					<img src="https://raw.githubusercontent.com/ProgrammingHero1/mission-2022/main/images/illustrators/illustrator-2.png" alt="">
+				<div class="mission-content-1 vission">
+					<img src="./images/illustrators/illustrator-2.png" alt="">
 					<h2>Vission</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum ut itaque sunt, odio consectetur dolor reiciendis doloremque amet ipsam id cumque nemo nulla, ratione culpa libero distinctio voluptate quae necessitatibus.</p>
+					<p>I dont't know what is mission as a beginners. But I think I'm know deeply about vission using googling. In the modern world Do not ask anyone before your google it. So google have everything to know the modern world.</p>
 				</div>
 				<div class="mission-content-1">
-					<img src="https://raw.githubusercontent.com/ProgrammingHero1/mission-2022/main/images/illustrators/illustrator-3.png" alt="">
+					<img src="./images/illustrators/illustrator-3.png" alt="">
 					<h2>Goals</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum ut itaque sunt, odio consectetur dolor reiciendis doloremque amet ipsam id cumque nemo nulla, ratione culpa libero distinctio voluptate quae necessitatibus.</p>
+					<p>My Golas in 2022 To become a web developer and build 20 Amazing project working with successful company and I want to get a job programming hero as web developer to help sutdnets nearly.By the way I talk randomly about anything.This is for practicing purpose</p>
 				</div>
 			</div>
 		</section>
@@ -60,11 +60,11 @@
 
 		<section class="inner-section-1" id='grow'>
 			<div class="image">
-				<img src="https://raw.githubusercontent.com/ProgrammingHero1/mission-2022/main/images/pictures/coding.png" alt="">
+				<img src="./images/pictures/coding.png" alt="">
 			</div>
 			<div class="content">
 				<h1>Develop<br> without limits </h1>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis cupiditate sit, explicabo repellendus odio corrupti. Eveniet dolorum repellat incidunt possimus repudiandae dolorem magnam ea aspernatur exercitationem voluptatem reiciendis, nisi dicta at fugit vel maxime quae, voluptatum reprehenderit nobis fuga aliquam distinctio et? Quisquam vel minima recusandae ipsum? Repellat, facere dolorum.</p>
+				<p>Every students work with limits when to learn anything but as a actual learner development a new thing to not countation about this topics only for development prupose so Man can develop for grow his skills so let's talk taler about it. More over the world people develop without limits that i preapare you.</p>
 				<a href="" class='red-btn'>Read The Documentation</a>
 			</div>
 		</section>
@@ -73,14 +73,25 @@
 		<section class="inner-section-1">
 			<div class="content">
 				<h1>Know Our <br> Global Community</h1>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis cupiditate sit, explicabo repellendus odio corrupti. Eveniet dolorum repellat incidunt possimus repudiandae dolorem magnam ea aspernatur exercitationem voluptatem reiciendis, nisi dicta at fugit vel maxime quae, voluptatum reprehenderit nobis fuga aliquam distinctio et? Quisquam vel minima recusandae ipsum? Repellat, facere dolorum.</p>
+				<p>As a developer you have to know our global developer community like more than online community have which any community we can join for level up our skills and collaborate with others developer and working with a company grow our business. As a result We have to collabratorate souce code in github.com so I can't write any more right now. I will sleep in heree.</p>
 				<a href="" class='red-btn'>Read The Documentation</a>
 			</div>
 			<div class="image ">
-				<img src="https://raw.githubusercontent.com/ProgrammingHero1/mission-2022/main/images/pictures/project.png" alt="">
+				<img src="./images/pictures/project.png" alt="">
 			</div>
 		</section>
-
+			<h1 class="app-title">Build <span>Corona Application</span></h1>
+		<section class="app">
+			<div class="app-img">
+				<img src="./images/pictures/app.png" alt="">
+				</div>
+			<div class="app-content">
+				<h2>Stay Safe with <br> <span style="color:orange"> GoCorona </span></h2>
+				<br>
+				<p>In the last year, corona virus first figure our china's yuang city. And then Chinda Safer than virus with few months with some thousands of people died, but child matched this virus all world, now all over the world have to accounted this virus with more than millions of people dies, and accounted over a billion. Not tell more about it , I can't write anymore because our sir give us assignment without no lorem ispam and that's the thing to be happen with me. Working as a student with learning half time a time web developerment to grow your skills. Skills not accomplish with your . But your hard work not finds your. You have to be come a iltellignet and genius, Extra-ordinary during corona virus! </p>
+				<a href='https://playstore.com/programming-hero' class='app-btn' target="_blank"> Download this </a>
+			</div>
+		</section>
 		<footer>
 			<h2>Mission 2022</h2>
 			<br> 
