--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<img src="./images/pictures/coding.png" alt="">
 			</div>
 			<div class="content">
-				<h1>Develop<br> without limits </h1>
+				<h1>Develop<br><span> without limits </span></h1>
 				<p>Every students work with limits when to learn anything but as a actual learner development a new thing to not countation about this topics only for development prupose so Man can develop for grow his skills so let's talk taler about it. More over the world people develop without limits that i preapare you.</p>
 				<a href="" class='red-btn'>Read The Documentation</a>
 			</div>
@@ -72,7 +72,7 @@
 
 		<section class="inner-section-1">
 			<div class="content">
-				<h1>Know Our <br> Global Community</h1>
+				<h1>Know Our <br><span> Global Community</span></h1>
 				<p>As a developer you have to know our global developer community like more than online community have which any community we can join for level up our skills and collaborate with others developer and working with a company grow our business. As a result We have to collabratorate souce code in github.com so I can't write any more right now. I will sleep in heree.</p>
 				<a href="" class='red-btn'>Read The Documentation</a>
 			</div>
@@ -86,7 +86,7 @@
 				<img src="./images/pictures/app.png" alt="">
 				</div>
 			<div class="app-content">
-				<h2>Stay Safe with <br> <span style="color:orange"> GoCorona </span></h2>
+				<h2>Stay Safe with <br> <span> GoCorona </span></h2>
 				<br>
 				<p>In the last year, corona virus first figure our china's yuang city. And then Chinda Safer than virus with few months with some thousands of people died, but child matched this virus all world, now all over the world have to accounted this virus with more than millions of people dies, and accounted over a billion. Not tell more about it , I can't write anymore because our sir give us assignment without no lorem ispam and that's the thing to be happen with me. Working as a student with learning half time a time web developerment to grow your skills. Skills not accomplish with your . But your hard work not finds your. You have to be come a iltellignet and genius, Extra-ordinary during corona virus! </p>
 				<a href='https://playstore.com/programming-hero' class='app-btn' target="_blank"> Download this </a>
