Prettier my code online

--- a/index.html
+++ b/index.html
@@ -1,102 +1,169 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
     <title>Mission 2022</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
-
     <header>
-			<nav>
-				<div class="logo"><a href="#">LOGO</a></div>
-				<div class="nav-links">
-					<a href="#">Home</a>
-					<a href="#mission">Mission</a>
-					<a href="#grow">Grow</a>
-				</div>
-			</nav>
-			<div class="header-main">
-				<div class="left-side">
-					<h1 class='title'> Stay Focused on <br> 
-					<span> Mission 2022 </span></h1>
-					<br>
-					<p>Leaning to new thing is hard for beginners. But is he watch so many video on youtube then he understand, that I have to search google and practice with project. Exactly I am here same problem that was accounted. Here are so random textes.</p>
-					<a class="red-btn">Explore Now</a>
-					<br>
-					<p class='info'>Scroll Down to Explore more about mission 2022</p>
-				</div>
-				<div class="right-side">
-					<img src="./images/jhankar.png" alt="Jhankar Sir">
-				</div>
-			</div>
-		</header>
+      <nav>
+        <div class="logo"><a href="#">LOGO</a></div>
+        <div class="nav-links">
+          <a href="#">Home</a>
+          <a href="#mission">Mission</a>
+          <a href="#grow">Grow</a>
+        </div>
+      </nav>
+      <div class="header-main">
+        <div class="left-side">
+          <h1 class="title">
+            Stay Focused on
+            <br />
+            <span>Mission 2022</span>
+          </h1>
+          <br />
+          <p>
+            Leaning to new thing is hard for beginners. But is he watch so many
+            video on youtube then he understand, that I have to search google
+            and practice with project. Exactly I am here same problem that was
+            accounted. Here are so random textes.
+          </p>
+          <a class="red-btn">Explore Now</a>
+          <br />
+          <p class="info">Scroll Down to Explore more about mission 2022</p>
+        </div>
+        <div class="right-side">
+          <img src="./images/jhankar.png" alt="Jhankar Sir" />
+        </div>
+      </div>
+    </header>
 
+    <section class="mission" id="mission">
+      <h1 class="mission-title">
+        My Mission in
+        <span>2022</span>
+      </h1>
+      <div class="mission-elements">
+        <div class="mission-content-1 mission-1">
+          <img src="./images/illustrators/illustrator-1.png" alt="" />
+          <h2>Mission</h2>
+          <p>
+            My mission is in 2022 to become a successfull self learner and
+            become a freelance web developer or web application developer. Now
+            am learning deeply form programming hero. web So Inshalla I will
+            become a sucessfull oneday with more and more hard works and
+            practice.
+          </p>
+        </div>
+        <div class="mission-content-1 vission">
+          <img src="./images/illustrators/illustrator-2.png" alt="" />
+          <h2>Vission</h2>
+          <p>
+            I dont't know what is mission as a beginners. But I think I'm know
+            deeply about vission using googling. In the modern world Do not ask
+            anyone before your google it. So google have everything to know the
+            modern world.
+          </p>
+        </div>
+        <div class="mission-content-1">
+          <img src="./images/illustrators/illustrator-3.png" alt="" />
+          <h2>Goals</h2>
+          <p>
+            My Golas in 2022 To become a web developer and build 20 Amazing
+            project working with successful company and I want to get a job
+            programming hero as web developer to help sutdnets nearly.By the way
+            I talk randomly about anything.This is for practicing purpose
+          </p>
+        </div>
+      </div>
+    </section>
 
-		<section class="mission" id='mission'>
-			<h1 class="mission-title">My Mission in <span>2022</span></h1>
-			<div class="mission-elements">
-				<div class="mission-content-1 mission-1">
-					<img src="./images/illustrators/illustrator-1.png" alt="">
-					<h2>Mission</h2>
-					<p>My mission is in 2022 to become a successfull self learner and become a freelance web developer or web application developer. Now am learning deeply form programming hero. web So Inshalla I will become a sucessfull oneday with more and more hard works and practice.</p>
-				</div>
-				<div class="mission-content-1 vission">
-					<img src="./images/illustrators/illustrator-2.png" alt="">
-					<h2>Vission</h2>
-					<p>I dont't know what is mission as a beginners. But I think I'm know deeply about vission using googling. In the modern world Do not ask anyone before your google it. So google have everything to know the modern world.</p>
-				</div>
-				<div class="mission-content-1">
-					<img src="./images/illustrators/illustrator-3.png" alt="">
-					<h2>Goals</h2>
-					<p>My Golas in 2022 To become a web developer and build 20 Amazing project working with successful company and I want to get a job programming hero as web developer to help sutdnets nearly.By the way I talk randomly about anything.This is for practicing purpose</p>
-				</div>
-			</div>
-		</section>
+    <section class="inner-section-1" id="grow">
+      <div class="image">
+        <img src="./images/pictures/coding.png" alt="" />
+      </div>
+      <div class="content">
+        <h1>
+          Develop
+          <br />
+          <span>without limits</span>
+        </h1>
+        <p>
+          Every students work with limits when to learn anything but as a actual
+          learner development a new thing to not countation about this topics
+          only for development prupose so Man can develop for grow his skills so
+          let's talk taler about it. More over the world people develop without
+          limits that i preapare you.
+        </p>
+        <a href="" class="red-btn">Read The Documentation</a>
+      </div>
+    </section>
 
-
-		<section class="inner-section-1" id='grow'>
-			<div class="image">
-				<img src="./images/pictures/coding.png" alt="">
-			</div>
-			<div class="content">
-				<h1>Develop<br><span> without limits </span></h1>
-				<p>Every students work with limits when to learn anything but as a actual learner development a new thing to not countation about this topics only for development prupose so Man can develop for grow his skills so let's talk taler about it. More over the world people develop without limits that i preapare you.</p>
-				<a href="" class='red-btn'>Read The Documentation</a>
-			</div>
-		</section>
-
-
-		<section class="inner-section-1">
-			<div class="content">
-				<h1>Know Our <br><span> Global Community</span></h1>
-				<p>As a developer you have to know our global developer community like more than online community have which any community we can join for level up our skills and collaborate with others developer and working with a company grow our business. As a result We have to collabratorate souce code in github.com so I can't write any more right now. I will sleep in heree.</p>
-				<a href="" class='red-btn'>Read The Documentation</a>
-			</div>
-			<div class="image ">
-				<img src="./images/pictures/project.png" alt="">
-			</div>
-		</section>
-			<h1 class="app-title">Build <span>Corona Application</span></h1>
-		<section class="app">
-			<div class="app-img">
-				<img src="./images/pictures/app.png" alt="">
-				</div>
-			<div class="app-content">
-				<h2>Stay Safe with <br> <span> GoCorona </span></h2>
-				<br>
-				<p>In the last year, corona virus first figure our china's yuang city. And then Chinda Safer than virus with few months with some thousands of people died, but child matched this virus all world, now all over the world have to accounted this virus with more than millions of people dies, and accounted over a billion. Not tell more about it , I can't write anymore because our sir give us assignment without no lorem ispam and that's the thing to be happen with me. Working as a student with learning half time a time web developerment to grow your skills. Skills not accomplish with your . But your hard work not finds your. You have to be come a iltellignet and genius, Extra-ordinary during corona virus! </p>
-				<a href='https://playstore.com/programming-hero' class='app-btn' target="_blank"> Download this </a>
-			</div>
-		</section>
-		<footer>
-			<h2>Mission 2022</h2>
-			<br> 
-			<p>&copy; 2022 All right reserved by Hard Worker </p>
-		</footer>
-
+    <section class="inner-section-1">
+      <div class="content">
+        <h1>
+          Know Our
+          <br />
+          <span>Global Community</span>
+        </h1>
+        <p>
+          As a developer you have to know our global developer community like
+          more than online community have which any community we can join for
+          level up our skills and collaborate with others developer and working
+          with a company grow our business. As a result We have to
+          collabratorate souce code in github.com so I can't write any more
+          right now. I will sleep in heree.
+        </p>
+        <a href="" class="red-btn">Read The Documentation</a>
+      </div>
+      <div class="image">
+        <img src="./images/pictures/project.png" alt="" />
+      </div>
+    </section>
+    <h1 class="app-title">
+      Build
+      <span>Corona Application</span>
+    </h1>
+    <section class="app">
+      <div class="app-img">
+        <img src="./images/pictures/app.png" alt="" />
+      </div>
+      <div class="app-content">
+        <h2>
+          Stay Safe with
+          <br />
+          <span>GoCorona</span>
+        </h2>
+        <br />
+        <p>
+          In the last year, corona virus first figure our china's yuang city.
+          And then Chinda Safer than virus with few months with some thousands
+          of people died, but child matched this virus all world, now all over
+          the world have to accounted this virus with more than millions of
+          people dies, and accounted over a billion. Not tell more about it , I
+          can't write anymore because our sir give us assignment without no
+          lorem ispam and that's the thing to be happen with me. Working as a
+          student with learning half time a time web developerment to grow your
+          skills. Skills not accomplish with your . But your hard work not finds
+          your. You have to be come a iltellignet and genius, Extra-ordinary
+          during corona virus!
+        </p>
+        <a
+          href="https://playstore.com/programming-hero"
+          class="app-btn"
+          target="_blank"
+        >
+          Download this
+        </a>
+      </div>
+    </section>
+    <footer>
+      <h2>Mission 2022</h2>
+      <br />
+      <p>&copy; 2022 All right reserved by Hard Worker</p>
+    </footer>
   </body>
 </html>
